Improve suggestions: - Added priority filters to return most relevant results first - Extract more entries from database to apply the priority filter on them